impliment filtering of tables and downloads

--- a/Inventory/templates/Inventory/inventory.html
+++ b/Inventory/templates/Inventory/inventory.html
@@ -4,8 +4,8 @@
 {% block content %}
     <div class="container-fluid">
         <div class="page-header">
-            <h1><a href="/">Seed inventory</a></h1>
-            <a href="{% url 'question_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> Add a question</a>
+            <h1><a href="/">Currenty inventory</a></h1>
+            <a href="{% url 'add_inventory' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> Add a question</a>
         </div>
     </div>
 
