download table button and start upload checking

--- a/Inventory/templates/Inventory/add_inventory.html
+++ b/Inventory/templates/Inventory/add_inventory.html
@@ -10,7 +10,7 @@
                 To update the current inventory, please add a file decription and 
                 select  the file you want to upload. If you are unsure of the format, 
                  please click on this 
-                <a href="{{ MEDIA_URL }}/templates/addition.csv" download> template file</a>
+                <a href="{{ MEDIA_URL }}/templates/addition.txt" download> template file</a>
                 to see what the input should look like. The description, file, and timestap will all be stored in a DB upon
                 submission.
             </h4>
