finsh input test, reorg add inventory page

--- a/Inventory/templates/Inventory/add_inventory.html
+++ b/Inventory/templates/Inventory/add_inventory.html
@@ -35,9 +35,9 @@
 
 
         <div class="col-md-12">
-        <h1>
-            Current inventory
-        </h1>
+        <h3>
+            Addition Records
+        </h3>
             {% load render_table from django_tables2 %}
             {% load bootstrap3 %}
 
