add withdraw section

--- a/Inventory/templates/Inventory/base.html
+++ b/Inventory/templates/Inventory/base.html
@@ -31,7 +31,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/records">Records <span class="sr-only">(current)</span></a></li>
         <li><a href="add_inventory">Add inventory</a></li>
-        <li><a href="#">Withdraw inventory</a></li>
+        <li><a href="withdraw_inventory">Withdraw inventory</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Contact us</a></li>
