--- a/Inventory/templates/Inventory/base.html
+++ b/Inventory/templates/Inventory/base.html
@@ -24,14 +24,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">SeedInv</a>
+      <a class="navbar-brand" href="/SeedInv">SeedInv</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
-        <li><a href="/records">Records <span class="sr-only">(current)</span></a></li>
-        <li><a href="add_inventory">Add inventory</a></li>
-        <li><a href="withdraw_inventory">Withdraw inventory</a></li>
+        <li><a href="/SeedInv/records">Records <span class="sr-only">(current)</span></a></li>
+        <li><a href="/SeedInv/add_inventory">Add inventory</a></li>
+        <li><a href="/SeedInv/withdraw_inventory">Withdraw inventory</a></li>
+        <li><a href="/SeedInv/qr_code">QR_codes</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Contact us</a></li>
