fail upload if partial error. Convert to all or nothing

--- a/Inventory/templates/Inventory/add_inventory.html
+++ b/Inventory/templates/Inventory/add_inventory.html
@@ -13,6 +13,12 @@
                 <a href="{{ MEDIA_URL }}/templates/addition.txt" download> template file</a>
                 to see what the input should look like. The description, file, and timestap will all be stored in a DB upon
                 submission.
+                <br>
+                <br>
+                <b> IF you are not redirected to the main page after submission and you see an issue next to one of your files
+                    then nothing was added to the database. Please see the fail file and fix the errors in your original file
+                    for reuploading.
+                </b>
             </h4>
         </div>
 
